# multiauthenticator

./: .bandit  .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: pre-commit.yml  release.yml  test.yml  workflow.yml
multiauthenticator/: __init__.py  multiauthenticator.py
multiauthenticator/tests/: conftest.py  test_deprecated.py  test_multiauthenticator.py
